apps/template-cluster/audiobookshelf/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: heavy-uploads
  namespace: audiobookshelf
spec:
  buffering:
    maxRequestBodyBytes: 0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: "audiobookshelf-heavy-uploads@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - YOUR_DOMAIN
      secretName: audiobookshelf-tls
  rules:
    - host: books.YOUR_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: http
